finally now added the new requests

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-C:\Users\Ayman\Desktop\training\Application-Active-Learning\Active-Learning-Application-for-Object-Detection-on-a-Technical-Building-Equipment-Dataset\app
+app/
+app/Lib/site-packages/six.py
