--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,85 @@ backend/website/__pycache__/crud.cpython-39.pyc
 backend/website/__pycache__/db.cpython-39.pyc
 backend/website/__pycache__/main.cpython-39.pyc
 backend/website/__pycache__/models.cpython-39.pyc
+storage/Models/best.pt_83599869/confusion_matrix.png
+storage/Models/best.pt_83599869/events.out.tfevents.1685381582.LAPTOP-REVHNSF0.13576.0
+storage/Models/best.pt_83599869/F1_curve.png
+storage/Models/best.pt_83599869/labels_correlogram.jpg
+storage/Models/best.pt_83599869/labels.jpg
+storage/Models/best.pt_83599869/P_curve.png
+storage/Models/best.pt_83599869/PR_curve.png
+storage/Models/best.pt_83599869/R_curve.png
+storage/Models/best.pt_83599869/results.csv
+storage/Models/best.pt_83599869/results.png
+storage/Models/best.pt_83599869/train_batch0.jpg
+storage/Models/best.pt_83599869/train_batch1.jpg
+storage/Models/best.pt_83599869/train_batch2.jpg
+storage/Models/best.pt_83599869/val_batch0_labels.jpg
+storage/Models/best.pt_83599869/val_batch0_pred.jpg
+storage/Models/best.pt_83599869/val_batch1_labels.jpg
+storage/Models/best.pt_83599869/val_batch1_pred.jpg
+storage/Models/best.pt_83599869/weights/best.pt
+storage/Models/best.pt_83599869/weights/last.pt
+storage/Projects/string_test22/data.yaml
+storage/Projects/string_test22/images/train/20210803_095537.jpg
+storage/Projects/string_test22/images/train/20210803_095545.jpg
+storage/Projects/string_test22/images/train/20210803_095559.jpg
+storage/Projects/string_test22/images/train/20210803_095612.jpg
+storage/Projects/string_test22/images/train/20210803_095715.jpg
+storage/Projects/string_test22/images/train/20210803_095754.jpg
+storage/Projects/string_test22/images/train/20210803_095805.jpg
+storage/Projects/string_test22/images/train/20210803_095822.jpg
+storage/Projects/string_test22/images/train/20210803_095855.jpg
+storage/Projects/string_test22/images/train/20210803_095912.jpg
+storage/Projects/string_test22/images/train/20210803_095926.jpg
+storage/Projects/string_test22/images/train/20210803_095933.jpg
+storage/Projects/string_test22/images/train/20210803_095953.jpg
+storage/Projects/string_test22/images/train/20210803_100008.jpg
+storage/Projects/string_test22/images/train/20210803_100024.jpg
+storage/Projects/string_test22/images/train/20210803_100033.jpg
+storage/Projects/string_test22/images/train/20210803_100120.jpg
+storage/Projects/string_test22/images/val/20210803_095537.jpg
+storage/Projects/string_test22/images/val/20210803_095545.jpg
+storage/Projects/string_test22/images/val/20210803_095612.jpg
+storage/Projects/string_test22/images/val/20210803_095754.jpg
+storage/Projects/string_test22/images/val/20210803_095805.jpg
+storage/Projects/string_test22/images/val/20210803_095822.jpg
+storage/Projects/string_test22/images/val/20210803_095855.jpg
+storage/Projects/string_test22/images/val/20210803_095912.jpg
+storage/Projects/string_test22/images/val/20210803_095933.jpg
+storage/Projects/string_test22/images/val/20210803_095953.jpg
+storage/Projects/string_test22/images/val/20210803_100008.jpg
+storage/Projects/string_test22/images/val/20210803_100120.jpg
+storage/Projects/string_test22/labels/train.cache
+storage/Projects/string_test22/labels/train.cache.npy
+storage/Projects/string_test22/labels/val.cache
+storage/Projects/string_test22/labels/val.cache.npy
+storage/Projects/string_test22/labels/train/20210803_095537.txt
+storage/Projects/string_test22/labels/train/20210803_095545.txt
+storage/Projects/string_test22/labels/train/20210803_095559.txt
+storage/Projects/string_test22/labels/train/20210803_095612.txt
+storage/Projects/string_test22/labels/train/20210803_095715.txt
+storage/Projects/string_test22/labels/train/20210803_095754.txt
+storage/Projects/string_test22/labels/train/20210803_095805.txt
+storage/Projects/string_test22/labels/train/20210803_095822.txt
+storage/Projects/string_test22/labels/train/20210803_095855.txt
+storage/Projects/string_test22/labels/train/20210803_095912.txt
+storage/Projects/string_test22/labels/train/20210803_095926.txt
+storage/Projects/string_test22/labels/train/20210803_095933.txt
+storage/Projects/string_test22/labels/train/20210803_095953.txt
+storage/Projects/string_test22/labels/train/20210803_100008.txt
+storage/Projects/string_test22/labels/train/20210803_100024.txt
+storage/Projects/string_test22/labels/train/20210803_100033.txt
+storage/Projects/string_test22/labels/train/20210803_100120.txt
+storage/Projects/string_test22/labels/val/20210803_095537.txt
+storage/Projects/string_test22/labels/val/20210803_095545.txt
+storage/Projects/string_test22/labels/val/20210803_095612.txt
+storage/Projects/string_test22/labels/val/20210803_095754.txt
+storage/Projects/string_test22/labels/val/20210803_095805.txt
+storage/Projects/string_test22/labels/val/20210803_095822.txt
+storage/Projects/string_test22/labels/val/20210803_095855.txt
+storage/Projects/string_test22/labels/val/20210803_095912.txt
+storage/Projects/string_test22/labels/val/20210803_095933.txt
+storage/Projects/string_test22/labels/val/20210803_095953.txt
+storage/Projects/string_test22/labels/val/20210803_100008.txt
+storage/Projects/string_test22/labels/val/20210803_100120.txt
