--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-papaparse": "^4.1.0",
     "react-router-dom": "^6.11.1",
     "react-tag-input": "^6.8.1",
     "react-webcam": "^7.1.0"
