fixed image quality, fixed con score, fixed class

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,448 @@ storage/Annotations/20210803_095926.txt
 storage/Annotations/20210803_095933.txt
 storage/Annotations/20210803_095953.txt
 storage/Annotations/20210803_100008.txt
+frontend/public/20210803_095515.jpg
+frontend/public/20210803_095639.jpg
+frontend/public/20210803_095655.jpg
+frontend/public/20210803_095707.jpg
+frontend/public/20210803_100051.jpg
+frontend/public/20210803_100111.jpg
+frontend/public/20210803_100149.jpg
+frontend/public/20210803_100254.jpg
+frontend/public/20210803_100656.jpg
+frontend/public/20210803_101130.jpg
+frontend/public/20210803_101230.jpg
+frontend/public/20210803_101322.jpg
+frontend/public/20210803_101415.jpg
+frontend/public/20210803_101511.jpg
+frontend/public/20210803_101626.jpg
+frontend/public/20210803_101845.jpg
+frontend/public/20210803_101904.jpg
+frontend/public/20210803_102025.jpg
+frontend/public/20210803_102250.jpg
+frontend/public/20210803_102431.jpg
+frontend/public/20210803_102828.jpg
+frontend/public/20210803_103109.jpg
+frontend/public/20210803_103451.jpg
+frontend/public/20210803_103551.jpg
+frontend/public/20210803_103709.jpg
+frontend/public/20210803_111824.jpg
+frontend/public/20210803_111832.jpg
+frontend/public/20210803_111919.jpg
+frontend/public/20210803_111926.jpg
+frontend/public/20210803_111950.jpg
+frontend/public/20210803_112007.jpg
+frontend/public/20210803_112024.jpg
+frontend/public/20210803_112035.jpg
+frontend/public/20210803_112042.jpg
+frontend/public/20210803_112118.jpg
+frontend/public/20210803_112125.jpg
+frontend/public/20210803_112133.jpg
+frontend/public/20210803_112140.jpg
+frontend/public/20210803_112151.jpg
+frontend/public/20210803_112303.jpg
+frontend/public/20210803_112311.jpg
+frontend/public/20210803_112458.jpg
+frontend/public/20210803_112523.jpg
+frontend/public/20210803_112541.jpg
+frontend/public/20210803_112554.jpg
+frontend/public/20210803_112626.jpg
+frontend/public/20210803_112635.jpg
+frontend/public/20210803_112707.jpg
+frontend/public/20210803_112719.jpg
+frontend/public/20210803_112727.jpg
+frontend/public/20210803_112735.jpg
+frontend/public/20210803_112746.jpg
+frontend/public/20210803_112757.jpg
+frontend/public/20210803_112808.jpg
+frontend/public/20210810_112146.jpg
+frontend/public/20210810_112211.jpg
+frontend/public/20210810_112442.jpg
+frontend/public/20210810_112504.jpg
+frontend/public/20210810_112801.jpg
+frontend/public/20210810_112950.jpg
+frontend/public/20210810_112955.jpg
+frontend/public/20210810_113001.jpg
+frontend/public/20210810_113056.jpg
+frontend/public/20210810_113111.jpg
+frontend/public/20210810_113223.jpg
+frontend/public/20210810_113234.jpg
+frontend/public/20210810_113308.jpg
+frontend/public/20210810_113313.jpg
+frontend/public/20210810_113755.jpg
+frontend/public/20210810_113807.jpg
+frontend/public/20210810_113849.jpg
+frontend/public/20210810_114637.jpg
+frontend/public/20210810_114644.jpg
+frontend/public/20210810_114659.jpg
+frontend/public/20210810_114739.jpg
+frontend/public/20210810_114811.jpg
+frontend/public/20210810_115152.jpg
+frontend/public/20210810_115156.jpg
+frontend/public/20210810_115233.jpg
+frontend/public/20210810_120009.jpg
+frontend/public/20210810_120106.jpg
+frontend/public/20210810_124737.jpg
+frontend/public/20210810_124741.jpg
+frontend/public/20210810_125024.jpg
+frontend/public/20210810_130255.jpg
+frontend/public/20210810_130315.jpg
+frontend/public/20210810_130415.jpg
+frontend/public/20210810_131834.jpg
+frontend/public/20210810_131840.jpg
+frontend/public/20210810_131921.jpg
+frontend/public/20210810_132617.jpg
+frontend/public/20210810_132822.jpg
+frontend/public/20210810_132914.jpg
+frontend/public/20210810_132923.jpg
+frontend/public/20210810_132941.jpg
+frontend/public/20210810_133328.jpg
+frontend/public/20210810_133452.jpg
+frontend/public/20210810_133649.jpg
+frontend/public/20210810_133723.jpg
+frontend/public/20210810_134021.jpg
+frontend/public/20210810_134039.jpg
+frontend/public/20210810_134354.jpg
+frontend/public/20210810_134414.jpg
+frontend/public/20210810_134615.jpg
+frontend/public/20210810_135144.jpg
+frontend/public/20210810_135459.jpg
+frontend/public/20210810_140508.jpg
+frontend/public/20210810_141413.jpg
+frontend/public/20210810_141431.jpg
+frontend/public/20210810_141502.jpg
+frontend/public/20210810_141556.jpg
+frontend/public/20210810_141608.jpg
+frontend/public/20210810_142021.jpg
+frontend/public/20210810_142638.jpg
+frontend/public/20210810_143017.jpg
+frontend/public/20210810_143220.jpg
+frontend/public/20210810_143530.jpg
+frontend/public/20210810_143615.jpg
+frontend/public/20210810_143959.jpg
+frontend/public/20210810_144238.jpg
+frontend/public/20210810_145003.jpg
+frontend/public/20210816_163513.jpg
+frontend/public/20210816_163858.jpg
+frontend/public/20210816_170522.jpg
+frontend/public/20210816_174551.jpg
+frontend/public/20210816_195727.jpg
+frontend/public/20210818_195411.jpg
+frontend/public/20210818_195419.jpg
+frontend/public/20210827_083801.jpg
+frontend/public/20210827_083815.jpg
+frontend/public/20210827_084329.jpg
+frontend/public/20210827_084608.jpg
+frontend/public/20210827_084928.jpg
+frontend/public/20210827_084945.jpg
+frontend/public/20210827_092120.jpg
+frontend/public/20210827_093207.jpg
+frontend/public/20210827_094506.jpg
+frontend/public/20210827_095128.jpg
+frontend/public/20210827_100022.jpg
+frontend/public/20210827_100929.jpg
+frontend/public/20210827_101323.jpg
+frontend/public/20210827_101358.jpg
+frontend/public/20210827_101418.jpg
+frontend/public/20210827_101441.jpg
+frontend/public/20210827_101449.jpg
+frontend/public/20210827_102634.jpg
+frontend/public/20210827_102757.jpg
+frontend/public/20210827_103559.jpg
+frontend/public/20210827_103624.jpg
+frontend/public/20210827_103703.jpg
+frontend/public/20210827_103732.jpg
+frontend/public/20210827_103758.jpg
+frontend/public/20210827_104256.jpg
+frontend/public/20210827_104325.jpg
+frontend/public/20210827_105004.jpg
+frontend/public/20210827_111910.jpg
+frontend/public/20210827_111925.jpg
+frontend/public/20210827_112157.jpg
+frontend/public/20210827_113133.jpg
+frontend/public/20210827_113410.jpg
+frontend/public/20210827_113927.jpg
+frontend/public/20210827_114020.jpg
+frontend/public/20210827_114632.jpg
+frontend/public/20210827_122324.jpg
+frontend/public/20210827_122602.jpg
+frontend/public/20210827_122624.jpg
+frontend/public/20210827_122645.jpg
+frontend/public/20210827_122714.jpg
+frontend/public/20210827_122751.jpg
+frontend/public/20210827_122758.jpg
+frontend/public/20210827_124853.jpg
+frontend/public/20210827_124912.jpg
+frontend/public/20210827_124955.jpg
+frontend/public/20210827_125013.jpg
+frontend/public/20210827_125047.jpg
+frontend/public/20210827_125340.jpg
+frontend/public/20210827_125405.jpg
+frontend/public/20210827_125446.jpg
+frontend/public/20210827_125457.jpg
+frontend/public/20210827_125734.jpg
+frontend/public/20210827_125830.jpg
+frontend/public/20210827_130132.jpg
+frontend/public/20210827_130253.jpg
+frontend/public/20210827_130301.jpg
+frontend/public/20210827_130743.jpg
+frontend/public/20210902_165001.jpg
+frontend/public/20210902_165011.jpg
+frontend/public/20210902_165028.jpg
+frontend/public/20210902_174208.jpg
+frontend/public/20210902_174414.jpg
+frontend/public/20210902_174556.jpg
+frontend/public/20210902_174608.jpg
+frontend/public/20210902_174657.jpg
+frontend/public/20210902_174848.jpg
+frontend/public/20210902_174854.jpg
+frontend/public/20210902_174931.jpg
+frontend/public/20210902_174951.jpg
+frontend/public/20210902_175004.jpg
+frontend/public/20210902_175013.jpg
+frontend/public/20210902_175142.jpg
+frontend/public/20210902_175204.jpg
+frontend/public/20210902_175215.jpg
+frontend/public/20210902_175315.jpg
+frontend/public/20210902_175436.jpg
+frontend/public/20210902_175507.jpg
+frontend/public/20210902_175556.jpg
+frontend/public/20210902_175620.jpg
+frontend/public/20210902_175746.jpg
+frontend/public/20210902_180102.jpg
+frontend/public/20210902_180153.jpg
+frontend/public/20210902_180255.jpg
+frontend/public/20210902_180506.jpg
+frontend/public/20211104_221544.jpg
+frontend/public/20211104_221549.jpg
+frontend/public/alarm_de_1.jpg
+frontend/public/alarm_de_2.jpg
+frontend/public/alarm_de_3.jpg
+frontend/public/alarm_de_4.jpg
+frontend/public/alarm_de_5.jpg
+frontend/public/alarm_de_7.jpg
+frontend/public/alarm_de_8.jpg
+frontend/public/alarm_de_9.jpg
+frontend/public/alarm_de_12.jpg
+frontend/public/alarm_de_14.jpg
+frontend/public/alarm_de_15.jpg
+frontend/public/alarm_de_26.jpg
+frontend/public/call_point_de_1.jpg
+frontend/public/call_point_de_7.jpg
+frontend/public/call_point_de_10.jpg
+frontend/public/call_point_de_11.jpg
+frontend/public/call_point_de_12.jpg
+frontend/public/call_point_de_18.jpg
+frontend/public/call_point_de_26.jpg
+frontend/public/call_point_de_27.jpg
+frontend/public/call_point_de_29.jpg
+frontend/public/call_point_de_30.jpg
+frontend/public/call_point_de_31.jpg
+frontend/public/call_point_de_32.jpg
+frontend/public/call_point_de_33.jpg
+frontend/public/call_point_de_35.jpg
+frontend/public/call_point_de_36.jpg
+frontend/public/call_point_de_40.jpg
+frontend/public/call_point_de_41.jpg
+frontend/public/call_point_de_42.jpg
+frontend/public/call_point_de_44.jpg
+frontend/public/call_point_de_46.jpg
+frontend/public/call_point_de_47.jpg
+frontend/public/call_point_de_48.jpg
+frontend/public/call_point_de_50.jpg
+frontend/public/call_point_de_57.jpg
+frontend/public/call_point_de_58.jpg
+frontend/public/call_point_de_60.jpg
+frontend/public/call_point_de_62.jpg
+frontend/public/call_point_de_63.jpg
+frontend/public/call_point_de_68.jpg
+frontend/public/call_point_de_71.jpg
+frontend/public/call_point_de_72.jpg
+frontend/public/call_point_de_73.jpg
+frontend/public/call_point_de_75.jpg
+frontend/public/call_point_de_83.jpg
+frontend/public/call_point_de_85.jpg
+frontend/public/call_point_de_91.jpg
+frontend/public/call_point_de_94.jpg
+frontend/public/call_point_de_95.jpg
+frontend/public/call_point_de_97.jpg
+frontend/public/call_point_de_101.jpg
+frontend/public/call_point_de_109.jpg
+frontend/public/call_point_de_110.jpg
+frontend/public/call_point_de_114.jpg
+frontend/public/call_point_de_115.jpg
+frontend/public/call_point_de_117.jpg
+frontend/public/call_point_de_127.jpg
+frontend/public/call_point_de_139.jpg
+frontend/public/call_point_de_141.jpg
+frontend/public/foam_fire_de_2.jpg
+frontend/public/foam_fire_de_13.jpg
+frontend/public/foam_fire_de_24.jpg
+frontend/public/foam_fire_de_60.jpg
+frontend/public/foam_fire_de_61.jpg
+frontend/public/foam_fire_de_82.jpg
+frontend/public/foam_fire_de_95.jpg
+frontend/public/foam_fire_de_114.jpg
+frontend/public/foam_fire_de_129.jpg
+frontend/public/foam_fire_de_143.jpg
+frontend/public/foam_fire_de_151.jpg
+frontend/public/foam_fire_de_171.jpg
+frontend/public/foam_fire_de_172.jpg
+frontend/public/foam_fire_de_173.jpg
+frontend/public/foam_fire_de_180.jpg
+frontend/public/foam_fire_de_184.jpg
+frontend/public/foam_fire_de_185.jpg
+frontend/public/foam_fire_de_203.jpg
+frontend/public/foam_fire_de_204.jpg
+frontend/public/foam_fire_de_211.jpg
+frontend/public/foam_fire_de_221.jpg
+frontend/public/foam_fire_de_223.jpg
+frontend/public/foam_fire_de_230.jpg
+frontend/public/foam_fire_de_232.jpg
+frontend/public/foam_fire_de_248.jpg
+frontend/public/foam_fire_de_256.jpg
+frontend/public/foam_fire_de_257.jpg
+frontend/public/foam_fire_de_262.jpg
+frontend/public/foam_fire_de_263.jpg
+frontend/public/foam_fire_de_266.jpg
+frontend/public/foam_fire_de_268.jpg
+frontend/public/foam_fire_de_269.jpg
+frontend/public/foam_fire_de_274.jpg
+frontend/public/foam_fire_de_275.jpg
+frontend/public/foam_fire_de_288.jpg
+frontend/public/foam_fire_de_290.jpg
+frontend/public/foam_fire_de_291.jpg
+frontend/public/foam_fire_de_303.jpg
+frontend/public/foam_fire_de_322.jpg
+frontend/public/foam_fire_de_327.jpg
+frontend/public/foam_fire_de_329.jpg
+frontend/public/foam_fire_de_330.jpg
+frontend/public/foam_fire_de_337.jpg
+frontend/public/foam_fire_de_338.jpg
+frontend/public/foam_fire_de_343.jpg
+frontend/public/foam_fire_de_346.jpg
+frontend/public/foam_fire_de_348.jpg
+frontend/public/foam_fire_de_353.jpg
+frontend/public/foam_fire_de_359.jpg
+frontend/public/foam_fire_de_360.jpg
+frontend/public/foam_fire_de_361.jpg
+frontend/public/foam_fire_de_362.jpg
+frontend/public/foam_fire_de_367.jpg
+frontend/public/foam_fire_de_368.jpg
+frontend/public/foam_fire_de_369.jpg
+frontend/public/foam_fire_de_376.jpg
+frontend/public/foam_fire_de_378.jpg
+frontend/public/foam_fire_de_382.jpg
+frontend/public/foam_fire_de_387.jpg
+frontend/public/foam_fire_de_391.jpg
+frontend/public/foam_fire_de_392.jpg
+frontend/public/foam_fire_de_395.jpg
+frontend/public/foam_fire_de_407.jpg
+frontend/public/IMG_5637.JPG
+frontend/public/IMG_5638.JPG
+frontend/public/IMG_5641.JPG
+frontend/public/IMG_5644.JPG
+frontend/public/IMG_5645.JPG
+frontend/public/IMG_5648.JPG
+frontend/public/IMG_5649.JPG
+frontend/public/IMG_5652.JPG
+frontend/public/IMG_5653.JPG
+frontend/public/IMG_5673.JPG
+frontend/public/IMG_5674.JPG
+frontend/public/IMG_5675.JPG
+frontend/public/IMG_5679.JPG
+frontend/public/IMG_5683.JPG
+frontend/public/IMG_5685.JPG
+frontend/public/IMG_5716.JPG
+frontend/public/IMG_5718.JPG
+frontend/public/IMG_5720.JPG
+frontend/public/IMG_5722.JPG
+frontend/public/IMG_5730.JPG
+frontend/public/IMG_5731.JPG
+frontend/public/IMG_6049.JPG
+frontend/public/IMG_6055.JPG
+frontend/public/IMG_6058.JPG
+frontend/public/IMG_6063.JPG
+frontend/public/IMG_6064.JPG
+frontend/public/IMG_6065.JPG
+frontend/public/IMG_6079.JPG
+frontend/public/IMG_6081.JPG
+frontend/public/IMG_6089.JPG
+frontend/public/IMG_6090.JPG
+frontend/public/IMG_6100.JPG
+frontend/public/IMG_6101.JPG
+frontend/public/IMG_6112.JPG
+frontend/public/IMG_6132.JPG
+frontend/public/IMG_6135.JPG
+frontend/public/IMG_6161.JPG
+frontend/public/IMG_6167.JPG
+frontend/public/IMG_6215.JPG
+frontend/public/IMG_6274.JPG
+frontend/public/IMG_6275.JPG
+frontend/public/IMG_6296.JPG
+frontend/public/IMG_6297.JPG
+frontend/public/IMG_6298.JPG
+frontend/public/IMG_6321.JPG
+frontend/public/IMG_6331.JPG
+frontend/public/IMG_6332.JPG
+frontend/public/IMG_6344.JPG
+frontend/public/IMG_6346.JPG
+frontend/public/IMG_6362.JPG
+frontend/public/IMG_6363.JPG
+frontend/public/IMG_6378.JPG
+frontend/public/IMG_6379.JPG
+frontend/public/IMG_6386.JPG
+frontend/public/IMG_6387.JPG
+frontend/public/sensor_de_8.jpg
+frontend/public/sensor_de_10.jpg
+frontend/public/sensor_de_15.jpg
+frontend/public/sensor_de_16.jpg
+frontend/public/water_fire_de_3.jpg
+frontend/public/water_fire_de_4.jpg
+frontend/public/water_fire_de_6.jpg
+frontend/public/water_fire_de_7.jpg
+frontend/public/water_fire_de_10.jpg
+frontend/public/water_fire_de_11.jpg
+frontend/public/water_fire_de_15.jpg
+frontend/public/water_fire_de_16.jpg
+frontend/public/water_fire_de_19.jpg
+frontend/public/water_fire_de_23.jpg
+frontend/public/water_fire_de_24.jpg
+frontend/public/water_fire_de_30.jpg
+frontend/public/water_fire_de_37.jpg
+frontend/public/water_fire_de_41.jpg
+frontend/public/water_fire_de_50.jpg
+frontend/public/water_fire_de_56.jpg
+frontend/public/water_fire_de_59.jpg
+frontend/public/water_fire_de_61.jpg
+frontend/public/water_fire_de_65.jpg
+frontend/public/water_fire_de_74.jpg
+frontend/public/water_fire_de_75.jpg
+frontend/public/water_fire_de_77.jpg
+frontend/public/water_fire_de_80.jpg
+frontend/public/water_fire_de_84.jpg
+frontend/public/water_fire_de_89.jpg
+frontend/public/water_fire_de_100.jpg
+frontend/public/water_fire_de_102.jpg
+frontend/public/water_fire_de_104.jpg
+frontend/public/water_fire_de_106.jpg
+frontend/public/water_fire_de_115.jpg
+frontend/public/water_fire_de_116.jpg
+frontend/public/water_fire_de_119.jpg
+frontend/public/water_fire_de_120.jpg
+frontend/public/water_fire_de_122.jpg
+frontend/public/water_fire_de_124.jpg
+frontend/public/water_fire_de_128.jpg
+frontend/public/water_fire_de_129.jpg
+frontend/public/water_fire_de_131.jpg
+frontend/public/water_fire_de_132.jpg
+frontend/public/Annotated_Images/20210803_095515.jpg
+frontend/public/Annotated_Images/20210803_095639.jpg
+frontend/public/Annotated_Images/20210803_095707.jpg
+frontend/public/Annotated_Images/20210803_100051.jpg
+frontend/public/Annotated_Images/20210803_100656.jpg
+frontend/public/Annotated_Images/20210803_101230.jpg
+frontend/public/Annotated_Images/20210803_103551.jpg
+frontend/public/Annotated_Images/20210810_112211.jpg
+frontend/public/20210803_103709.jpg
+frontend/public/20210803_111832.jpg
