--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,9 @@
     "react-papaparse": "^4.1.0",
     "react-router-dom": "^6.11.1",
     "react-tag-input": "^6.8.1",
-    "react-webcam": "^7.1.0"
+    "react-webcam": "^7.1.0",
+    "react-markdown": "^8.0.0",
+    "jszip": "^3.10.1" 
   },
 "devDependencies": {
     "@eslint/js": "^9.9.0",
