--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,13 @@
     "react-tag-input": "^6.8.1",
     "react-webcam": "^7.1.0",
     "react-markdown": "^8.0.0",
-    "jszip": "^3.10.1" 
+    "jszip": "^3.10.1",
+    "@thatopen/components": ">=2.3.0"
+  },
+  "peerDependencies": {
+    "@thatopen/fragments": ">=2.3.0-alpha",
+    "three": "^0.160.1",
+    "web-ifc": "0.0.59"
   },
 "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -39,6 +45,12 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "@thatopen/fragments": "~2.3.0",
+    "@thatopen/ui": "~2.3.0",
+    "@thatopen/ui-obc": "~2.3.0",
+    "@types/earcut": "^2.1.4",
+    "@types/three": "^0.160.0",
+    "three": "^0.160.1",
+    "web-ifc": "0.0.59"
   }
 }
