--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,43 +14,39 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@thatopen/components": "^2.4.2",
+    "@thatopen/components-front": "^2.4.2",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.0",
     "react-papaparse": "^4.1.0",
     "react-router-dom": "^6.11.1",
     "react-tag-input": "^6.8.1",
-    "react-webcam": "^7.1.0",
-    "react-markdown": "^8.0.0",
-    "jszip": "^3.10.1",
-    "@thatopen/components": ">=2.3.0"
+    "react-webcam": "^7.1.0"
   },
   "peerDependencies": {
-    "@thatopen/fragments": ">=2.3.0-alpha",
-    "three": "^0.160.1",
-    "web-ifc": "0.0.59"
+    "three": "^0.160.1"
   },
-"devDependencies": {
+  "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@faker-js/faker": "^8.0.2",
+    "@types/earcut": "^2.1.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@faker-js/faker": "^8.0.2",
+    "@types/three": "^0.160.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "@thatopen/fragments": "~2.3.0",
-    "@thatopen/ui": "~2.3.0",
-    "@thatopen/ui-obc": "~2.3.0",
-    "@types/earcut": "^2.1.4",
-    "@types/three": "^0.160.0",
-    "three": "^0.160.1",
-    "web-ifc": "0.0.59"
+    "three": "^0.160.1"
   }
 }
