new gitignore for weights

--- a/.gitignore
+++ b/.gitignore
@@ -609,3 +609,9 @@ frontend/public/Visual_Annotation_Tool_Images/Images/cropped_images/inspection t
 frontend/public/Visual_Annotation_Tool_Images/Images/cropped_images/inspection tag_2_20210803_100703.jpg_results.jpg
 frontend/public/Visual_Annotation_Tool_Images/Images/cropped_images/inspection tag_3_20210803_100703.jpg_results.jpg
 frontend/public/Visual_Annotation_Tool_Images/Images/cropped_images/manufacturer tag_0_20210803_100703.jpg_results.jpg
+storage\Visual_Annotation_Tool\Detektion_Blockiertheit_amodal_Yolov8\best.pt
+storage\Visual_Annotation_Tool\Detektion_Blockiertheit_modal_Yolov8\best.pt
+storage\Visual_Annotation_Tool\Detektion_Brandschutzanlagen_Yolov8\best.pt
+storage\Visual_Annotation_Tool\Detektion_Prüfplakettenaufkleber_Yolov8\best.pt
+storage\Visual_Annotation_Tool\Detektion_Sicherheitsschilder_Yolov8\best.pt
+storage\Visual_Annotation_Tool\Detektion_Wartungsinformationen_Yolov8\best.pt
